# OWZ

./: pyproject.toml  zad1.ipynb  zad2.ipynb  zad4.ipynb  zad5.ipynb
