[tool.poetry]
name = "owz"
version = "0.1.0"
description = ""
authors = ["Eryk Salamoński <eryk.salamonski@protonmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.22.1"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
